# multi-ndi-recorder

./: CMakeLists.txt  README.md
include/: AudioDeviceManager.h  FfmpegWriter.h  Logging.h  MainWindow.h  NdiManager.h  RecordingLibraryModel.h  SourceRecorder.h  SourceSettingsDialog.h  SourceTile.h
src/: AudioDeviceManager.cpp  FfmpegWriter.cpp  Logging.cpp  MainWindow.cpp  NdiManager.cpp  RecordingLibraryModel.cpp  SourceRecorder.cpp  SourceSettingsDialog.cpp  SourceTile.cpp  main.cpp
ui/: MainWindow.ui  SourceSettingsDialog.ui  SourceTile.ui
